[package]
name = "letterfront"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy_egui = "0.21"
rand = "0.8.5"
serde ={version = "1.0.171", features = ["derive"]}

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
